Configuraciones/Istio/feheroes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feheroes
  labels:
    app: fe-heroes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fe-heroes
  template:
    metadata:
      labels:
        app: fe-heroes
    spec:
      containers:
      - name: feheroes
        image: www.gz.com:5000/fehello-jib:0.0.1-SNAPSHOT
        imagePullPolicy: Always
        ports:
        - name: http  
          containerPort: 8085
        livenessProbe:
          httpGet:
            path: /heroes
            port: 8085
          initialDelaySeconds: 15
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /heroes
            port: 8085
          initialDelaySeconds: 0
          timeoutSeconds: 1          
      imagePullSecrets:
      - name: milocalregistry
---
apiVersion: v1
kind: Service
metadata:
  name: feheroes-svc
  annotations:
  labels:
    app: fe-heroes
spec:
  type: NodePort                
  selector:
    app: fe-heroes
  ports:
  - name: http              
    nodePort: 30151
    port: 80                
    targetPort: http	  
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: heroes
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: svc.com
    http:
      paths:
      - path: /misheroes(/|$)(.*)
        backend:
          serviceName: feheroes-svc
          servicePort: 80
# http://servicios.com/misheroes/heroes
