Configuraciones/Istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: feheroes-svc-vs
spec:
  hosts:
  - "*"
  gateways:
  - feheroes-svc-gw
  http:
  - match:
    - uri:
        exact: /misheroes
    rewrite:
      uri: /heroes
    route:
    - destination:
        host: feheroes-svc
        port:
          number: 80
  - route:
    - destination:
        host: feheroes-svc
# http://servicios.com:31380/heroes
# http://servicios.com:31380/misheroes
